# async_job_app

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/infrastructure/: database.py
docs/: job_app_system_design.md  job_lifecycle.md
docs/diagrams/: .$job_state_machine.drawio.bkp  database_schema.drawio  high_level_architecture_diagram.drawio  job_state_machine.drawio
